# frankenpandas

./: .editorconfig  .gitattributes  .gitignore  .mailmap  .skill-loop-progress-br-frankenpandas-uza04.6.md  .skill-loop-progress.md  AGENTS.md  AUTHORS.md  CATEGORICAL_COVERAGE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  COVERAGE_MATRIX.md  Cargo.toml  ERROR_CONFORMANCE.md  EXHAUSTIVE_LEGACY_ANALYSIS.md  EXISTING_PANDAS_STRUCTURE.md  FEATURE_PARITY.md  PANIC_CONTRACT_COVERAGE.md  PARITY-COVERAGE.md  PHASE2C_EXTRACTION_PACKET.md  README.md  REVIEW_SESSION_HANDOFF.md  SECURITY.md  TODO_EXECUTION_TRACKER.md  UPGRADE_LOG.md  claude-upgrade-progress.json  deny.toml  release-plz.toml  rustfmt.toml
.beads/: config.yaml  issues.jsonl
.github/: FUNDING.yml
.github/workflows/: ci.yml  fuzz-nightly.yml  release-plz.yml
artifacts/: api-coverage-drift-2026-05-08.json  api-coverage-drift-2026-05-08.md  feature_universe.json  join-merge-null-key-metamorphic-2026-05-08.md  reality-check-2026-05-03.md  reshape-null-nan-metamorphic-2026-05-08.md
artifacts/audits/: concurrency_audit_2026-06-07.md
artifacts/bench/: PROFILING_REPORT.md  bench_2026-05-25T08-56-43.744306+00-00.json  bench_2026-06-13T18-49-16.989488+00-00.json  bench_2026-06-13T19-00-25.342441+00-00.json  bench_2026-06-13T19-07-43.419940+00-00.json  bench_2026-06-13T19-07-53.269540+00-00.json  bench_2026-06-13T19-13-16.863769+00-00.json  bench_2026-06-13T22-15-27.133521+00-00.json  bench_2026-06-16T06-15-47.287917+00-00.json  bench_2026-06-16T06-52-00.503679+00-00.json  bench_2026-06-16T06-52-53.443472+00-00.json  bench_2026-06-16T06-52-56.233442+00-00.json  bench_2026-06-16T06-53-02.681371+00-00.json  bench_2026-06-16T06-53-07.697418+00-00.json  bench_2026-06-16T06-53-16.634557+00-00.json  bench_2026-06-16T06-53-30.025644+00-00.json  bench_2026-06-16T06-53-32.943598+00-00.json  bench_2026-06-16T18-35-19.111739+00-00.json  bench_2026-06-16T19-37-30.750631+00-00.json  bench_2026-06-20T09-52-10.415786+00-00.json  bench_2026-06-20T09-52-18.754263+00-00.json  bench_2026-06-20T09-52-20.957595+00-00.json  bench_2026-06-20T09-52-23.408032+00-00.json  bench_2026-06-20T09-52-24.258529+00-00.json  bench_2026-06-20T09-52-26.527821+00-00.json  bench_2026-06-20T09-52-28.350313+00-00.json  bench_2026-06-20T09-52-29.778463+00-00.json  bench_2026-06-21T03-21-55.998532+00-00.json  bench_2026-06-21T03-21-56.909349+00-00.json  bench_2026-06-27T11-21-39.698431+00-00.json  bench_2026-06-27T11-21-45.985710+00-00.json  bench_2026-06-27T11-21-47.837110+00-00.json  bench_2026-06-27T11-21-49.417701+00-00.json  bench_2026-06-27T11-21-53.215852+00-00.json  bench_2026-06-27T11-21-57.701894+00-00.json  bench_2026-06-27T11-22-01.050448+00-00.json  cc_fp_datetime_profile_2026-07-23.json  cc_fp_dot_panel_official_2026-07-23.json  cc_fp_groupby_intkey_profile_2026-07-23.json  cc_fp_indexing_profile_2026-07-23.json  (+63 more)
artifacts/optimization/: br-frankenpandas-uza04.187_clone_free_groupby_count_size.md  br-frankenpandas-uza04.189_clone_free_groupby_mean.md  br-frankenpandas-uza04.191_clone_free_groupby_min_max.md  negative-evidence-ledger-cod-a.md  negative-evidence-ledger-cod-b.md
artifacts/perf/: ROUND2_BASELINE.md  ROUND2_ISOMORPHISM_PROOF.md  ROUND2_OPPORTUNITY_MATRIX.md  ROUND2_RECOMMENDATION_CONTRACT.md  ROUND3_BASELINE.md  ROUND3_ISOMORPHISM_PROOF.md  ROUND3_OPPORTUNITY_MATRIX.md  ROUND3_RECOMMENDATION_CONTRACT.md  ROUND5_BASELINE.md  ROUND5_ISOMORPHISM_PROOF.md  ROUND5_OPPORTUNITY_MATRIX.md  ROUND5_RECOMMENDATION_CONTRACT.md  SCORECARD.md  cod_fp_df_transpose_100k_release_perf.data  cod_fp_l4vzc_df_transpose_100k_proto_profile.data  cod_fp_l4vzc_df_transpose_100k_proto_profile_report.txt  cod_fp_uza04_217_groupby_scalar_scorecard_2026-07-23.md  cod_frontier_read_hz1_scorecard_2026-07-23.md  high_ram_baseline_tn6qb4.json  high_ram_baseline_tn6qb4.md
artifacts/phase2c/: ADVERSARIAL_FUZZ_CORPUS.md  ASUPERSYNC_ANCHOR_MAP.md  ASUPERSYNC_RUST_INTEGRATION.md  DOC_API_CENSUS.md  DOC_CONCURRENCY_LIFECYCLE.md  DOC_DATA_MODEL_MAP.md  DOC_GAP_MATRIX.md  (+10 more)
benches/: vs_pandas_harness.py
crates/fp-bench/: Cargo.toml
crates/fp-bench/src/: main.rs
crates/frankenpandas/: CHANGELOG.md  Cargo.toml  README.md
crates/frankenpandas/src/: lib.rs
crates/frankenpandas/tests/: readme_quick_example.rs
docs/: NEGATIVE_EVIDENCE.md  RELEASE_SCORECARD.md  repo_vs_pandas_assessment_dustysummit.md
fuzz/: Cargo.toml  README.md
reports/: fixture_defect_set.json
scripts/: bench_pandas_baseline.py  feature_universe_gate.py  gauntlet_conformance_delta.sh  gauntlet_regression_e2e.sh  gen_coverage_matrix.py  gen_feature_parity_table.py  gen_perf_scorecard.py  validate_api_coverage_drift.py
(+3802 files in other folders)
